# -lot-Placement-System

./: .replit  app.py  dwg_parser.py  enhanced_ilot_app.py  enterprise_ilot_system.py  ilot_placement_engine.py  pyproject.toml  replit.md  requirements.txt  zone_classifier.py
-lot-Placement-System/: .replit  =4.8.0  README.md  app.py  replit.md  requirements.txt  streamlit_app.py
-lot-Placement-System/.streamlit/: config.toml
-lot-Placement-System/src/: robust_error_handler.py
-lot-Placement-System/temp_repo/apps/: streamlit_app.py
-lot-Placement-System/temp_repo/sample_files/: ovoDOSSIER COSTO - plan etage +1- projet.dwg
.streamlit/: config.toml
apps/: streamlit_app.py
attached_assets/: Pasted-clone-and-run-this-repo-https-github-com-rehmanul-lot-Placement-System-git-requirements-are-be-1751587758620_1751587758621.txt
src/: advanced_ai_models.py  caching_system.py  dwg_parser.py  enhanced_dwg_parser.py  ilot_placement_engine.py  parallel_processor.py  pdf_parser.py  placement_optimizer.py  progress_manager.py  smart_preprocessing.py  visualization.py  zone_classifier.py
temp_repo/: .replit
